fix pokeball search on mobile viewport

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,7 +1,11 @@
 header {
   position: relative;
   height: 100vh;
+  min-height: 700px;
   background-color: $red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .preloader {
@@ -66,10 +70,6 @@ header {
 
 .search-box {
   box-sizing: content-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
   background-color: $black;
   height: 80px;
   border-radius: 80px;
